Fix admin client logo hiding behind somewhere
 - Additionaly remove navbar collapse trigger when not in mobile mode

--- a/clients/admin/dev/assets/css/main.css
+++ b/clients/admin/dev/assets/css/main.css
@@ -173,8 +173,6 @@ li {
 nav.navbar {
   background-color: #595959;
   border-bottom: 2px solid black;
-  height: 71px;
-  padding-top: 10px;
 }
 nav.navbar .navbar-brand {
   color: white;
@@ -182,12 +180,19 @@ nav.navbar .navbar-brand {
 nav.navbar .navbar-brand:hover {
   color: #333333;
 }
+nav.navbar .navbar-brand {
+  padding-left: 15px;
+  padding-top: 10px;
+}
+nav.navbar .navbar-nav > li {
+  margin: 0;
+}
 nav.navbar .navbar-nav > li > a {
   color: white;
 }
 .navbar-collapse {
-  position: relative;
-  z-index: 999;
+  --position: relative;
+  --z-index: 999;
   background: #595959;
 }
 /*
